cambios de portfolio

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/avatar.png" alt="">
+      <img src="./assets/no-avatar.jpg" alt="">
       <h3>"Yo, disfrutando de mi café..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">Hola!, <br> Soy Nombre y Apellido </h1>
+        <h1 class="title">Hola!, <br> soy Luciano Hidalgo </h1>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
@@ -47,7 +47,7 @@
           <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
         </ul>
   
-        <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte un poco de mí, sigue deslizando!</p>
+        <p class="description">Soy Ingeniero informatico. <br>Actualmente trabajo en el area de Tester QA <br> Déjame contarte un poco de mí, sigue deslizando!</p>
       </div>
 
     </div>
@@ -80,20 +80,28 @@
     <aside class="half-section text-section">
         <ul class="project-list">
           <li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <h3>Proyecto 1</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              CANAL 4 JUJUY (TV MUSIC HOUSE) -Técnico en el Área Operaciones técnicas
+            Febrero 2018 a mayo 2018<br>
+            ▪ Soporte técnico a usuarios de las distintas áreas (edición, control, noticias, producción)
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
             <h3>Proyecto 2</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              MUNICIPALIDAD SAN SALVADOR DE JUJUY -Área informática - Infraestructura
+              Mayo 2018 a Junio 2022 <br>
+              ▪ Armado de racks<br>
+              ▪ Configuración de enlaces inalámbricos, antenas, edgepoints (ubiquiti).<br>
+              ▪ Instalación y configuración cámaras de seguridad <br>
+              ▪ Cableado de fibra óptica (fusión y tendido)
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
